--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ '10', '12' ]
+        node: [ 10, 12, 14 ]
     name: build (node ${{ matrix.node }})
     steps:
       - name: Checkout code
