--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/Brightspace/bunyan-firehose/issues"
   },
   "homepage": "https://github.com/Brightspace/bunyan-firehose#readme",
-  "main": "index.js",
+  "main": "src/index.js",
   "directories": {
     "test": "test"
   },
