Switch tests to es6 modules

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -6,6 +6,9 @@
         "mocha",
         "chai-friendly"
     ],
+    "parserOptions": {
+        "sourceType": "module"
+    },
     "rules": {
         "mocha/no-identical-title": [
             "error"
