--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "retry": "0.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/register": "^7.10.4",
     "bunyan": "^1.8.14",
     "chai": "^4.2.0",
     "d2l-license-checker": "^3.1.1",
