Add new label for automatic processes

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -34,3 +34,6 @@
 - name: vulnerability
   description: Fix for a vulnerability
   color: c5def5
+- name: auto
+  description: This issue or pull request was opened by an automated process
+  color: bdce3b
