--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "src/**/*.js"
   ],
   "dependencies": {
-    "aws-sdk": "2.717.0",
-    "lodash": "4.17.19",
-    "retry": "0.12.0"
+    "aws-sdk": "^2.717.0",
+    "lodash": "^4.17.19",
+    "retry": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
