--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         uses: Brightspace/third-party-actions@coverallsapp/github-action
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          flag-name: 'node ${{ matrix.node }}'
+          flag-name: node ${{ matrix.node }}
           parallel: true
   complete-coverage:
     needs: build
