--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   ],
   "dependencies": {
     "aws-sdk": "^2.751.0",
-    "lodash": "^4.17.20",
+    "lodash.merge": "^4.6.2",
     "retry": "^0.12.0"
   },
   "devDependencies": {
