--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,29 @@
 version: 2
 updates:
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+      time: '04:00'
+      timezone: America/Toronto
+    rebase-strategy: auto
+    labels:
+      - dependencies
+      - auto
+    commit-message:
+      prefix: build
+      include: scope
   - package-ecosystem: npm
     directory: /
     schedule:
       interval: daily
       time: '04:00'
       timezone: America/Toronto
-    open-pull-requests-limit: 10
+    rebase-strategy: auto
+    versioning-strategy: increase
     labels:
       - dependencies
       - auto
-    rebase-strategy: auto
-    versioning-strategy: increase
+    commit-message:
+      prefix: chore
+      include: scope
