--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "scripts": {
     "lint": "eslint .",
     "format": "npm run lint -s -- --fix",
-    "pretest": "npm run lint -s",
+    "license-check": "license-checker-ci",
+    "commitlint": "commitlint --from origin/master --to HEAD",
+    "pretest": "run-s -s lint commitlint",
     "test": "nyc mocha --colors"
   },
   "files": [
@@ -44,6 +46,8 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/register": "^7.12.1",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@semantic-release/git": "^9.0.0",
     "bunyan": "^1.8.14",
     "chai": "^4.2.0",
@@ -55,6 +59,7 @@
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-mocha": "^8.0.0",
     "mocha": "^8.2.1",
+    "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "semantic-release": "^17.2.2",
     "sinon": "^9.2.1"
